Added rudimentary skin support.
htdocs/skins/default/feeds.tpl,
htdocs/skins/default/view.tpl: Link to setskin.php in toolbar.

htdocs/skins/default/setskin.css: added
htdocs/skins/default/setskin.tpl: added

--- a/TODO
+++ b/TODO
@@ -409,3 +409,6 @@
   way to estimate a good number of parallel connections.
 	If there is, allow user to set $PARALLEL_UPDATES to "auto",
   and have it be computed automatically.
+- Skin: function to validate proposed skin:
+	- Should match /^\w+$/ or some such
+	- Make sure it's a directory in "skins"
