Started adding JavaScript magic.
htdocs/skins/fancy/feeds.tpl: Add onclick= attributes for updating feeds.
Tell JavaScript scripts where to find skin files.

htdocs/skins/fancy/index.css: Nail down size of icon cell in table.

htdocs/skins/fancy/feeds.js (added): Ajax functions for index view.

lib/common.inc: Added jsonify().

htdocs/update.php: Use jsonify() for JSON output.

AUTHORS: Added credit for icons used in feed update.

lib/database.inc: db_update_feed() returns count of old/new/updated
items.

--- a/AUTHORS
+++ b/AUTHORS
@@ -7,3 +7,16 @@ Brian Miller, for pointing me at some weird cases.
 
 Arthur C. Clarke and Stanley Kubrick, for showing a primitive
 newsreader in "2001: A Space Odyssey".
+
+htdocs/skins/fancy/Loading.gif: Flip Darius. Downloaded from
+http://commons.wikimedia.org/wiki/Image:Loading.gif
+(Creative Commons ShareAlike 2.5:
+http://creativecommons.org/licenses/by-sa/2.5/
+)
+
+Attention_niels_epting.png: Niels Epting. Downloaded from
+http://commons.wikimedia.org/wiki/Image:Attention_niels_epting.svg
+and resized to 18x18 pixels.
+(Creative Commons Public Domain Dedication:
+http://creativecommons.org/licenses/publicdomain/
+)
