--- a/TODO
+++ b/TODO
@@ -1,3 +1,6 @@
+- bug: JavaScript debug window gets _blackjack_'s LJ title wrong: it's
+  getting UTF-8 text, but apparently it thinks it's getting ISO8859-1,
+  and is converting it to UTF-8 (again).
 - bug: markitems somehow gave me
 	Bad command: ""
 	Last time, got it when authenticating via UMD. $_REQUEST is
