Begun work on marking items as read/unread on the fly.
htdocs/skins/fancy/view.js: Added mark_item()

htdocs/skins/fancy/item.tpl: Added 'state=' attribute to item, so it
can be marked on the fly, and 'onclick=' handler for checkboxes. Added
pub_date to item header, so that when items are removed from the page,
there won't be stray dates floating around.

htdocs/skins/fancy/view.css: Added rules for displaying collapsed
items.

htdocs/skins/fancy/view.tpl: Removed date between items, so items can
be removed one at a time.

--- a/TODO
+++ b/TODO
@@ -8,6 +8,8 @@
 - bug: when on the last page (earliest items) and use "mark all as
   read", sometimes get blank page.
 	Is this just the N810 browser being wonky?
+- Ajax: "Clear changes" should go through list of items and uncheck
+  them.
 - Ajax feed update: use regular expressions to find lines in JSON
   text. Text is sometimes truncated in the middle of a line, resulting
   in parse errors.
