--- a/AUTHORS
+++ b/AUTHORS
@@ -20,3 +20,7 @@ and resized to 18x18 pixels.
 (Creative Commons Public Domain Dedication:
 http://creativecommons.org/licenses/publicdomain/
 )
+
+blue-bg.jpg: adapted from
+http://commons.wikimedia.org/wiki/Image:Abstract_blue_background7.jpg
+(scaled and made tilable with the Gimp)
