--- a/TODO
+++ b/TODO
@@ -1,5 +1,8 @@
-- bug: Sometimes, Firefox error console complains of "not well formed"
-  JSON output. Add the stupid <![CDATA[...]]> wrapper.
+- bug: When updating feeds, sometimes spinner keeps going forever. Why?
+- bug: When adding a new feed, it takes two "update" clicks for it to
+  take: the first time, the number of posts shows up. The second time,
+  the title shows up.
+	Ideally, both should show up immediately.
 - bug: When Ajax updates feeds, it doesn't notice updates to the list
   of feeds.
 	Perhaps when updating all, update.php should append a list of
@@ -16,6 +19,12 @@
 	ALTER TABLE items CHANGE COLUMN url url VARCHAR(255);
 	ALTER TABLE items CHANGE COLUMN comment_url comment_url VARCHAR(255);
 	ALTER TABLE items CHANGE COLUMN comment_rss comment_rss VARCHAR(255);
+- When subscribing to a new feed, addfeed.php sends you back to the
+  index. Is this a good idea? Perhaps should go back to whichever site
+  you just subscribed to?
+	This doesn't seem to show up in the referer, though. Might
+  need to extract the site URL from the RSS feed. (Except for feeds
+  added manually from the index page.)
 - Try to put weblog name, author, date on one line. Too much wasted
   space otherwise.
 - Ajax: "Clear changes" should go through list of items and uncheck
