--- a/TODO
+++ b/TODO
@@ -1,3 +1,8 @@
+- Would be nice to mark a feed as inactive, for feeds that are only
+  interesting from time to time, like electoral-vote.com.
+- Link on feeds page (in both skins) to show inactive feeds, with
+  option to reactivate them.
+- Link on feeds page (in both skins) to deactivate feeds.
 - bug: When updating feeds, sometimes spinner keeps going forever. Why?
 - bug: When adding a new feed, it takes two "update" clicks for it to
   take: the first time, the number of posts shows up. The second time,
@@ -305,8 +310,6 @@
 - Add a way of marking an item as "saved for later".
 - Try to make a "collapsed" view for long articles that don't have a
   summary: clip to 10em or something.
-- Would be nice to mark a feed as inactive, for feeds that are only
-  interesting from time to time, like electoral-vote.com.
 - A bunch of elements in the templates have id="..." identifiers
   (body, forms, etc.) Come up with a good naming scheme for them, to
   keep them all straight.
